--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,21 +1,22 @@
-FROM node:14.17.0-alpine
-
-# Create app directory
-WORKDIR /app
-
-# Install app dependencies
+# Docker Image which is used as foundation to create
+# a custom Docker Image with this Dockerfile
+FROM node:10
+ 
+# A directory within the virtualized Docker environment
+# Becomes more relevant when using Docker Compose later
+WORKDIR /usr/src/app
+ 
+# Copies package.json and package-lock.json to Docker environment
 COPY package*.json ./
-
-RUN npm install -g create-react-app
-
-RUN npm install react-scripts
-
+ 
+# Installs all node packages
 RUN npm install
-
-# Copying rest of the application to app directory
+ 
+# Copies everything over to Docker environment
 COPY . .
-
-# Expose the port and start the application
-Expose 3000
-
-CMD ["npm","start"]
+ 
+# Uses port which is used by the actual application
+EXPOSE 3000
+ 
+# Finally runs the application
+CMD [ "npm", "start" ]
